--- a/clean_us_hotel_reviews.ipynb
+++ b/clean_us_hotel_reviews.ipynb
@@ -890,8 +890,8 @@
    "outputs": [],
    "source": [
     "#Also I creat a new csv:\n",
-    "df_clean.to_csv(r'data\\hotel_rates_us.csv', index = False)\n",
-    "df_san_diego.to_csv(r'data\\hotel_rates_san_diego.csv', index = False)"
+    "df_clean.to_csv(r'data/hotel_rates_us.csv', index = False)\n",
+    "df_san_diego.to_csv(r'data/hotel_rates_san_diego.csv', index = False)"
    ]
   }
  ],
