--- a/web_scraping_booking.ipynb
+++ b/web_scraping_booking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -117,33 +117,33 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>195</th>\n",
-       "      <td>Vagabond Inn San Diego Airport/Marina</td>\n",
-       "      <td>7.6</td>\n",
+       "      <th>970</th>\n",
+       "      <td>Solamar San Diego</td>\n",
+       "      <td>8.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>196</th>\n",
-       "      <td>The Pearl Hotel</td>\n",
+       "      <th>971</th>\n",
+       "      <td>Baymont by Wyndham San Diego Downtown</td>\n",
+       "      <td>7.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>972</th>\n",
+       "      <td>Andaz San Diego - a Concept by Hyatt</td>\n",
+       "      <td>8.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>973</th>\n",
+       "      <td>Hampton Inn San Diego Mission Valley</td>\n",
        "      <td>8.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>197</th>\n",
-       "      <td>Sonder — The Marin</td>\n",
+       "      <th>974</th>\n",
+       "      <td>San Diego Marriott Gaslamp Quarter</td>\n",
        "      <td>8.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>Homewood Suites by Hilton San Diego Airport-Li...</td>\n",
-       "      <td>8.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199</th>\n",
-       "      <td>Blue Heron Cottages</td>\n",
-       "      <td>9.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>200 rows × 2 columns</p>\n",
+       "<p>975 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -154,16 +154,16 @@
        "3                                 Omni San Diego Hotel   8.9 \n",
        "4    Hilton Garden Inn San Diego Mission Valley/Sta...   8.0 \n",
        "..                                                 ...    ...\n",
-       "195              Vagabond Inn San Diego Airport/Marina   7.6 \n",
-       "196                                    The Pearl Hotel   8.3 \n",
-       "197                                 Sonder — The Marin   8.3 \n",
-       "198  Homewood Suites by Hilton San Diego Airport-Li...   8.8 \n",
-       "199                                Blue Heron Cottages   9.5 \n",
+       "970                                  Solamar San Diego   8.4 \n",
+       "971              Baymont by Wyndham San Diego Downtown   7.7 \n",
+       "972               Andaz San Diego - a Concept by Hyatt   8.9 \n",
+       "973               Hampton Inn San Diego Mission Valley   8.3 \n",
+       "974                 San Diego Marriott Gaslamp Quarter   8.3 \n",
        "\n",
-       "[200 rows x 2 columns]"
+       "[975 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,10 +175,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_booking.to_csv(r'hotel_rates_booking.csv', index = False)"
+   ]
   }
  ],
  "metadata": {
