--- a/web_scraping_tripadvisor.ipynb
+++ b/web_scraping_tripadvisor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "            rate.append(i.split('\"')[1])\n",
     "        elif i.startswith('href='):\n",
     "            hotel.append(i.split(\"-\")[4])\n",
-    "    for i in range(len(hotels)):\n",
+    "    for i in range(len(hotel)):\n",
     "        hotel_rating = {\"hotel_name\":hotel[i],\"rating\":rate[i]}\n",
     "        data_scraped.append(hotel_rating)  \n",
     "    return data_scraped"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Kings_Inn_San_Diego</td>\n",
+       "      <td>Pacific_Terrace_Hotel</td>\n",
        "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -113,7 +113,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>SureStay_Hotel_By_Best_Western_San_Diego_Pacif...</td>\n",
+       "      <td>Tower23_Hotel</td>\n",
        "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -122,53 +122,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>195</th>\n",
-       "      <td>Travelodge_by_Wyndham_San_Ysidro</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>196</th>\n",
-       "      <td>Rodeway_Inn_San_Ysidro</td>\n",
-       "      <td>2.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>197</th>\n",
-       "      <td>Days_Inn_by_Wyndham_Mission_Valley_Qualcomm_St...</td>\n",
-       "      <td>2.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>Sunshine_Suites_at_Little_Italy</td>\n",
+       "      <th>351</th>\n",
+       "      <td>Santa_Fe_Park_RV_Resort</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>199</th>\n",
-       "      <td>Ace_Budget_Motel</td>\n",
+       "      <th>352</th>\n",
+       "      <td>RK_Buckner_Hostel</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>353</th>\n",
+       "      <td>West_Park_Inn</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>354</th>\n",
+       "      <td>Hostel_Habibi</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>355</th>\n",
+       "      <td>San_Diego_Motel</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>200 rows × 2 columns</p>\n",
+       "<p>356 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                            hotel_name rating\n",
-       "0                                   Bahia_Resort_Hotel    4.5\n",
-       "1                       Catamaran_Resort_Hotel_and_Spa    4.5\n",
-       "2                                  Kings_Inn_San_Diego    4.5\n",
-       "3                     Manchester_Grand_Hyatt_San_Diego    4.5\n",
-       "4    SureStay_Hotel_By_Best_Western_San_Diego_Pacif...    4.5\n",
-       "..                                                 ...    ...\n",
-       "195                   Travelodge_by_Wyndham_San_Ysidro      3\n",
-       "196                             Rodeway_Inn_San_Ysidro    2.5\n",
-       "197  Days_Inn_by_Wyndham_Mission_Valley_Qualcomm_St...    2.5\n",
-       "198                    Sunshine_Suites_at_Little_Italy      2\n",
-       "199                                   Ace_Budget_Motel      1\n",
+       "                           hotel_name rating\n",
+       "0                  Bahia_Resort_Hotel    4.5\n",
+       "1      Catamaran_Resort_Hotel_and_Spa    4.5\n",
+       "2               Pacific_Terrace_Hotel    4.5\n",
+       "3    Manchester_Grand_Hyatt_San_Diego    4.5\n",
+       "4                       Tower23_Hotel    4.5\n",
+       "..                                ...    ...\n",
+       "351           Santa_Fe_Park_RV_Resort      2\n",
+       "352                 RK_Buckner_Hostel    2.5\n",
+       "353                     West_Park_Inn      2\n",
+       "354                     Hostel_Habibi    2.5\n",
+       "355                   San_Diego_Motel      1\n",
        "\n",
-       "[200 rows x 2 columns]"
+       "[356 rows x 2 columns]"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,6 +176,15 @@
    "source": [
     "df_tripadvisor = pd.DataFrame(last_list)\n",
     "df_tripadvisor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_tripadvisor.to_csv(r'hotel_rates_tripadvisor.csv', index = False)"
    ]
   }
  ],
